# hzii-net

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
.github/workflows/: ci.yml  release.yml
docs/: build-and-release.md  openwrt.md  protocol.md  systemd.md  windows.md
packaging/openwrt/: hzii-net.init  install-immortalwrt.sh
packaging/systemd/: hzii-net.service
packaging/windows/: install-task.ps1
src/: config.rs  crypto.rs  lib.rs  main.rs  portal.rs  state.rs
