[package]
name = "hzii-net"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
authors = ["hzii-net contributors"]
description = "Headless campus portal login and keepalive client for BUAA Hangzhou Innovation Institute"
repository = "https://github.com/your-name/hzii-net"
license = "MIT"
keywords = ["campus-network", "portal", "openwrt", "keepalive"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
aes = "0.8.4"
anyhow = "1.0"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
ureq = { version = "2.12", default-features = false }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
